🎊Change folder name to 'workoutdetector'🎊

--- a/notebooks/similarity_image.ipynb
+++ b/notebooks/similarity_image.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from WorkoutDetector.utils.common import *\n",
+    "from workoutdetector.utils.common import *\n",
     "plt.rcParams['figure.dpi'] = 300\n",
     "plt.rcParams['figure.figsize'] = (5, 3)"
    ]
