--- a/notebooks/RepCount_data_process.ipynb
+++ b/notebooks/RepCount_data_process.ipynb
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1064,7 @@
        "[636 rows x 8 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1104,6 +1104,37 @@
     "all_df.to_csv(Path(base, 'annotation.csv'))\n",
     "print(len(all_df))\n",
     "print(all_df.tail(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        True\n",
+       "1        True\n",
+       "2        True\n",
+       "3        True\n",
+       "4        True\n",
+       "        ...  \n",
+       "1017    False\n",
+       "1018    False\n",
+       "1019    False\n",
+       "1020    False\n",
+       "1021    False\n",
+       "Name: split, Length: 884, dtype: bool"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_df['split'] == 'train'"
    ]
   }
  ],
