--- a/notebooks/RepCount_data_process.ipynb
+++ b/notebooks/RepCount_data_process.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This notebook cleans the dataset and creates a new csv file with name `all_data.csv`.\n",
     "\n",
-    "Advice: Don't trust the originial annotations.\n",
+    "Advice: Don't trust the original annotations.\n",
     "\n",
     "Errors:\n",
     "1. Video missing frames. (One video in bench_pressing)\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,13 +27,12 @@
     "import os\n",
     "from os.path import join as osj\n",
     "from pathlib import Path\n",
-    "from workoutdetector.settings import PROJ_ROOT\n",
-    "base = osj(PROJ_ROOT, 'datasets/RepCount/')"
+    "base = osj('../datasets/RepCount/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +231,7 @@
        "[5 rows x 305 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +439,7 @@
        "779  squat  REjznoKN8Q8_188.mp4  REjznoKN8Q8      8  stu8_75"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +579,7 @@
        "4  FyGBSs1X1qM_105.mp4  FyGBSs1X1qM      3   stu3_1  114.0  105.0   stu3_1.mp4"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +602,7 @@
        "'13 62 62 103 103 126 126 146 146 171 171 194 194 215 215 239 239 260 260 281'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +823,7 @@
        "0     battle_rope           13          3           0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1063,7 @@
        "[636 rows x 8 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1084,7 +1083,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "val 113\n",
+      "test 135\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('val', len(all_df[all_df['split']=='val']))\n",
+    "print('test', len(all_df[all_df['split']=='test']))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1146,7 @@
        "Name: split, Length: 884, dtype: bool"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
