Fix RepCount annotation csv Drop test stu6_68. Incorrect units.

--- a/notebooks/RepCount_data_process.ipynb
+++ b/notebooks/RepCount_data_process.ipynb
@@ -6,19 +6,20 @@
    "source": [
     "# RepCount dataset processing\n",
     "\n",
-    "This notebook cleans the dataset and creates a new csv file with name `all_data.csv`.\n",
+    "This notebook cleans the dataset and creates a new csv file with name `annotation.csv` in current folder.\n",
     "\n",
     "Advice: Don't trust the original annotations.\n",
     "\n",
-    "Errors:\n",
+    "Known errors:\n",
     "1. Video missing frames. (One video in bench_pressing)\n",
     "2. Annotation of repetition is incorrect. (Many rows in bench_pressing)\n",
-    "3. Column `type` has typos."
+    "3. Column `type` has typos.\n",
+    "4. Repetition unit is incorrect. Uses second rather than frame index. `stu6_68.mp4`. Please at least use float so I can convert it. But it's int."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +232,7 @@
        "[5 rows x 305 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,26 +258,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CLEAN\n",
-    "\n",
-    "I am dying cleaning this dataset.\n",
-    "Hope there is no mislabeled data in the world and everyone gets beautifully formatted data.😭😭😭😖😖😖"
+    "## CLEAN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Mislabeled data. Should be situp.\n",
+    "# Mislabelled data. Should be situp.\n",
     "train_df[train_df['name'] == 'stu2_48.mp4']\n",
     "train_df.loc[train_df['name'] == 'stu2_48.mp4', 'type'] = 'situp'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -302,11 +300,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Labeled frame is longer than actual frame length. I don't know why. \n",
+    "# Labelled frame is longer than actual frame length. I don't know why. \n",
     "# It does have 1841 frames. But only 1681 frames in rawframe dir.\n",
     "# I know why. The video is broken.\n",
     "train_df[train_df['name'] == 'stu1_10.mp4']\n",
@@ -315,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -357,6 +355,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['squat' 'stu6_68.mp4' 6 4.0 7.0 8.0 11.0 11.0 14.0 14.0 18.0 18.0 21.0\n",
+      " 23.0 26.0 nan nan nan nan nan]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The reps are annotated in seconds. Convert to frames. Nope, drop this.\n",
+    "print(test_df[test_df['name'] == 'stu6_68.mp4'].values[0][0:20])\n",
+    "test_df.drop(test_df[test_df['name'] == 'stu6_68.mp4'].index, inplace=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -365,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +457,7 @@
        "779  squat  REjznoKN8Q8_188.mp4  REjznoKN8Q8      8  stu8_75"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +597,7 @@
        "4  FyGBSs1X1qM_105.mp4  FyGBSs1X1qM      3   stu3_1  114.0  105.0   stu3_1.mp4"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +620,7 @@
        "'13 62 62 103 103 126 126 146 146 171 171 194 194 215 215 239 239 260 260 281'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,14 +670,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "506 91 108\n"
+      "506 91 107\n"
      ]
     }
    ],
@@ -678,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +758,7 @@
        "      <td>squat</td>\n",
        "      <td>101</td>\n",
        "      <td>16</td>\n",
-       "      <td>18</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -811,7 +829,7 @@
       ],
       "text/plain": [
        "             type  count_train  count_val  count_test\n",
-       "9           squat          101         16          18\n",
+       "9           squat          101         16          17\n",
        "6         pull_up           94         14          19\n",
        "8           situp           94         18          20\n",
        "2     front_raise           93         19          18\n",
@@ -823,7 +841,7 @@
        "0     battle_rope           13          3           0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1081,7 @@
        "[636 rows x 8 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1083,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1091,7 +1109,7 @@
      "output_type": "stream",
      "text": [
       "val 113\n",
-      "test 135\n"
+      "test 134\n"
      ]
     }
    ],
@@ -1102,19 +1120,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "884\n",
+      "883\n",
       "       class_ split         name          vid  start    end  count  \\\n",
-      "1021  pull_up  test  stu1_36.mp4  ok0F_-opRFo  104.0  140.0    9.0   \n",
+      "1020  pull_up  test  stu1_36.mp4  ok0F_-opRFo  104.0  140.0    9.0   \n",
       "\n",
       "                                                   reps  \n",
-      "1021  52 109 109 165 165 245 245 315 840 880 880 935...  \n"
+      "1020  52 109 109 165 165 245 245 315 840 880 880 935...  \n"
      ]
     }
    ],
@@ -1126,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1138,15 +1156,15 @@
        "3        True\n",
        "4        True\n",
        "        ...  \n",
+       "1016    False\n",
        "1017    False\n",
        "1018    False\n",
        "1019    False\n",
        "1020    False\n",
-       "1021    False\n",
-       "Name: split, Length: 884, dtype: bool"
+       "Name: split, Length: 883, dtype: bool"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
