--- a/notebooks/RepCount_data_process.ipynb
+++ b/notebooks/RepCount_data_process.ipynb
@@ -14,12 +14,12 @@
     "1. Video missing frames. (One video in bench_pressing)\n",
     "2. Annotation of repetition is incorrect. (Many rows in bench_pressing)\n",
     "3. Column `type` has typos.\n",
-    "4. Repetition unit is incorrect. Uses second rather than frame index. `stu6_68.mp4`. Please at least use float so I can convert it. But it's int."
+    "4. Repetition unit is incorrect. Uses second rather than frame index. `stu6_68.mp4`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "[5 rows x 305 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
        "779  squat  REjznoKN8Q8_188.mp4  REjznoKN8Q8      8  stu8_75"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
        "4  FyGBSs1X1qM_105.mp4  FyGBSs1X1qM      3   stu3_1  114.0  105.0   stu3_1.mp4"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
        "'13 62 62 103 103 126 126 146 146 171 171 194 194 215 215 239 239 260 260 281'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
        "0     battle_rope           13          3           0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1081,7 +1081,7 @@
        "[636 rows x 8 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1115,12 +1115,12 @@
    ],
    "source": [
     "print('val', len(all_df[all_df['split']=='val']))\n",
-    "print('test', len(all_df[all_df['split']=='test']))\n"
+    "print('test', len(all_df[all_df['split']=='test']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1128,43 +1128,61 @@
      "output_type": "stream",
      "text": [
       "883\n",
-      "       class_ split         name          vid  start    end  count  \\\n",
-      "1020  pull_up  test  stu1_36.mp4  ok0F_-opRFo  104.0  140.0    9.0   \n",
+      "     index   class_ split         name          vid  start    end  count  \\\n",
+      "882   1020  pull_up  test  stu1_36.mp4  ok0F_-opRFo  104.0  140.0    9.0   \n",
       "\n",
-      "                                                   reps  \n",
-      "1020  52 109 109 165 165 245 245 315 840 880 880 935...  \n"
+      "                                                  reps  \n",
+      "882  52 109 109 165 165 245 245 315 840 880 880 935...  \n"
      ]
     }
    ],
    "source": [
-    "all_df.to_csv(Path(base, 'annotation.csv'))\n",
+    "all_df.to_csv(Path(base, 'annotation.csv'), index=False)\n",
     "print(len(all_df))\n",
     "print(all_df.tail(1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "883\n"
+     ]
+    }
+   ],
+   "source": [
+    "load_df = pd.read_csv(Path(base, 'annotation.csv'))\n",
+    "print(len(load_df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0        True\n",
-       "1        True\n",
-       "2        True\n",
-       "3        True\n",
-       "4        True\n",
-       "        ...  \n",
-       "1016    False\n",
-       "1017    False\n",
-       "1018    False\n",
-       "1019    False\n",
-       "1020    False\n",
+       "0       True\n",
+       "1       True\n",
+       "2       True\n",
+       "3       True\n",
+       "4       True\n",
+       "       ...  \n",
+       "878    False\n",
+       "879    False\n",
+       "880    False\n",
+       "881    False\n",
+       "882    False\n",
        "Name: split, Length: 883, dtype: bool"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
