Add FPS column to annotation of the RepCount datasest

--- a/notebooks/RepCount_data_process.ipynb
+++ b/notebooks/RepCount_data_process.ipynb
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1128,11 +1128,11 @@
      "output_type": "stream",
      "text": [
       "883\n",
-      "     index   class_ split         name          vid  start    end  count  \\\n",
-      "882   1020  pull_up  test  stu1_36.mp4  ok0F_-opRFo  104.0  140.0    9.0   \n",
+      "       class_ split         name          vid  start    end  count  \\\n",
+      "1020  pull_up  test  stu1_36.mp4  ok0F_-opRFo  104.0  140.0    9.0   \n",
       "\n",
-      "                                                  reps  \n",
-      "882  52 109 109 165 165 245 245 315 840 880 880 935...  \n"
+      "                                                   reps  \n",
+      "1020  52 109 109 165 165 245 245 315 840 880 880 935...  \n"
      ]
     }
    ],
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1168,17 +1168,17 @@
     {
      "data": {
       "text/plain": [
-       "0       True\n",
-       "1       True\n",
-       "2       True\n",
-       "3       True\n",
-       "4       True\n",
-       "       ...  \n",
-       "878    False\n",
-       "879    False\n",
-       "880    False\n",
-       "881    False\n",
-       "882    False\n",
+       "0        True\n",
+       "1        True\n",
+       "2        True\n",
+       "3        True\n",
+       "4        True\n",
+       "        ...  \n",
+       "1016    False\n",
+       "1017    False\n",
+       "1018    False\n",
+       "1019    False\n",
+       "1020    False\n",
        "Name: split, Length: 883, dtype: bool"
       ]
      },
@@ -1189,6 +1189,48 @@
    ],
    "source": [
     "all_df['split'] == 'train'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Add FPS column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        class_  split          name  vid  start  end  count  \\\n",
+      "0  front_raise  train  train951.mp4  NaN    NaN  NaN    4.0   \n",
+      "\n",
+      "                          reps   fps  \n",
+      "0  6 72 72 132 132 204 204 271  30.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "from torchvision.io import VideoReader\n",
+    "\n",
+    "data_root = os.path.expanduser('~/data/RepCount/videos')\n",
+    "fps_dict = {}\n",
+    "for row in all_df.itertuples():\n",
+    "    path = os.path.join(data_root,row.split, row.name)\n",
+    "    vid = VideoReader(path)\n",
+    "    meta = vid.get_metadata()\n",
+    "    fps = meta['video']['fps'][0]\n",
+    "    fps_dict[row.name] = fps\n",
+    "\n",
+    "all_df['fps'] = all_df['name'].apply(lambda x: fps_dict[x])\n",
+    "all_df.to_csv(Path(base, 'annotation.csv'))\n",
+    "\n",
+    "print(all_df.head(1))"
    ]
   }
  ],
