Fix bug effecting hmm result

--- a/notebooks/hmm.ipynb
+++ b/notebooks/hmm.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,8 +188,7 @@
     "    count, reps = pred_to_count(y-1, stride=1, step=1) # minus 1 because no-class is 0\n",
     "    diff = abs(count - gt_count)\n",
     "    obo = 1 if (diff <= 1) else 0\n",
-    "    err = diff / gt_count if gt_count > 0 else diff\n",
-    "    return obo, err, acc,  reps\n",
+    "    return obo, diff, acc,  reps\n",
     "\n",
     "action = 'situp'\n",
     "model = train(action)"
@@ -267,35 +266,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\begin{tabular}{lllrrr}\n",
+      "\\begin{tabular}{llrrr}\n",
       "\\toprule\n",
-      "{} &  split &       action &       obo &        mae &   hmm\\_acc \\\\\n",
+      "split &      action &      obo &       mae &  hmm\\_acc \\\\\n",
       "\\midrule\n",
-      "0  &  train &        situp &  0.031915 &   1.000000 &  0.627069 \\\\\n",
-      "1  &    val &        situp &  0.055556 &   1.000000 &  0.571925 \\\\\n",
-      "2  &   test &        situp &  0.050000 &   1.000000 &  0.573876 \\\\\n",
-      "3  &  train &      push\\_up &  0.080460 &   1.533643 &  0.550777 \\\\\n",
-      "4  &    val &      push\\_up &  0.111111 &   1.151386 &  0.600524 \\\\\n",
-      "5  &   test &      push\\_up &  0.000000 &   1.608882 &  0.508321 \\\\\n",
-      "6  &  train &      pull\\_up &  0.031915 &   3.590176 &  0.275135 \\\\\n",
-      "7  &    val &      pull\\_up &  0.000000 &   5.209023 &  0.303173 \\\\\n",
-      "8  &   test &      pull\\_up &  0.052632 &   3.812696 &  0.275376 \\\\\n",
-      "9  &  train &    jump\\_jack &  0.013158 &   3.208728 &  0.405631 \\\\\n",
-      "10 &    val &    jump\\_jack &  0.000000 &   3.534580 &  0.379096 \\\\\n",
-      "11 &   test &    jump\\_jack &  0.038462 &   3.021169 &  0.405284 \\\\\n",
-      "12 &  train &        squat &  0.000000 &   9.317024 &  0.282075 \\\\\n",
-      "13 &    val &        squat &  0.000000 &   8.694694 &  0.304134 \\\\\n",
-      "14 &   test &        squat &  0.000000 &  13.655033 &  0.266938 \\\\\n",
-      "15 &  train &  front\\_raise &  0.000000 &   7.529784 &  0.201787 \\\\\n",
-      "16 &    val &  front\\_raise &  0.000000 &   6.893372 &  0.192434 \\\\\n",
-      "17 &   test &  front\\_raise &  0.000000 &   5.240311 &  0.201110 \\\\\n",
+      "train &       situp & 0.159574 &  9.255319 & 0.378971 \\\\\n",
+      "  val &       situp & 0.222222 &  9.722222 & 0.428948 \\\\\n",
+      " test &       situp & 0.100000 & 11.000000 & 0.433482 \\\\\n",
+      "train &     push\\_up & 0.172414 &  8.827586 & 0.519052 \\\\\n",
+      "  val &     push\\_up & 0.277778 &  8.000000 & 0.531171 \\\\\n",
+      " test &     push\\_up & 0.062500 &  9.562500 & 0.511787 \\\\\n",
+      "train &     pull\\_up & 0.223404 &  6.010638 & 0.500284 \\\\\n",
+      "  val &     pull\\_up & 0.142857 &  6.071429 & 0.582846 \\\\\n",
+      " test &     pull\\_up & 0.526316 &  3.578947 & 0.554533 \\\\\n",
+      "train &   jump\\_jack & 0.394737 & 10.618421 & 0.545389 \\\\\n",
+      "  val &   jump\\_jack & 0.533333 &  3.800000 & 0.648088 \\\\\n",
+      " test &   jump\\_jack & 0.384615 &  9.307692 & 0.608489 \\\\\n",
+      "train &       squat & 0.326733 &  4.287129 & 0.517694 \\\\\n",
+      "  val &       squat & 0.375000 &  4.000000 & 0.540361 \\\\\n",
+      " test &       squat & 0.411765 &  2.470588 & 0.558124 \\\\\n",
+      "train & front\\_raise & 0.344086 &  3.655914 & 0.456462 \\\\\n",
+      "  val & front\\_raise & 0.421053 &  2.894737 & 0.439685 \\\\\n",
+      " test & front\\_raise & 0.333333 &  3.555556 & 0.570661 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -312,12 +311,9 @@
     "        for i,v in js['scores'].items():\n",
     "            test_x.append(np.array(list(v.values())))\n",
     "        test_x = np.array(test_x)\n",
-    "        test_y = reps_to_label(item.reps, item.total_frames)\n",
-    "        test_y = np.array(test_y)\n",
-    "        test_y[test_y != 0] -= CLASSES.index(item.class_) * 2 # map class id to 0, 1, 2\n",
     "\n",
     "        pred = model.predict(test_x)\n",
-    "        obo, err, acc, reps = hmm_infer(model, val_x, item.reps)\n",
+    "        obo, err, acc, reps = hmm_infer(model, test_x, item.reps)\n",
     "        total_obo += obo\n",
     "        total_err += err\n",
     "        total_acc += acc\n",
