Clean 90% done Need some tests and visualization code

--- a/workoutdet/hmm.ipynb
+++ b/workoutdet/hmm.ipynb
@@ -24,10 +24,9 @@
     "from matplotlib.collections import LineCollection\n",
     "import random\n",
     "import pandas as pd\n",
-    "from workoutdetector.dataset import FrameDataset, build_test_transform, RepcountHelper\n",
-    "from workoutdetector.utils import plot_all, plt_params, plot_per_action, parse_json\n",
+    "from workoutdet.data import FrameDataset, reps_to_label, get_rep_data\n",
+    "from workoutdet.utils import plot_all, plt_params, plot_per_action, parse_json, plot_hmm\n",
     "import json\n",
-    "from workoutdetector.time_series import reps_to_label\n",
     "\n",
     "CLASSES = ['situp', 'push_up', 'pull_up', 'jump_jack', 'squat', 'front_raise']\n",
     "\n",
@@ -40,8 +39,8 @@
     "    'lines.linewidth': 1,\n",
     "    'axes.prop_cycle': plt.cycler('color', COLORS),\n",
     "    'font.size': 10,\n",
-    "    'font.family': 'monospace',\n",
-    "}\n"
+    "    'font.family': 'sans-serif',\n",
+    "}"
    ]
   },
   {
@@ -60,10 +59,8 @@
    "source": [
     "data_root = os.path.expanduser(\"~/data/RepCount\")\n",
     "anno_path = osj(data_root, \"annotation.csv\")\n",
-    "helper = RepcountHelper(data_root, anno_path)\n",
-    "CLASSES = helper.classes\n",
-    "print(CLASSES)\n",
-    "data = list(helper.get_rep_data(['train', 'val', 'test'], ['all']).values())"
+    "data = list(get_rep_data(anno_path, data_root, ['train', 'val', 'test'], ['all']).values())\n",
+    "print(CLASSES)"
    ]
   },
   {
@@ -144,9 +141,8 @@
    "outputs": [],
    "source": [
     "from hmmlearn import hmm\n",
-    "from workoutdetector.datasets import FeatureDataset\n",
-    "from workoutdetector.utils import pred_to_count\n",
-    "from workoutdetector.utils.eval import smooth_pred\n",
+    "from workoutdet.data import FeatureDataset\n",
+    "from workoutdet.evaluate import pred_to_count, major_vote\n",
     "from torch.utils.data import DataLoader"
    ]
   },
@@ -186,7 +182,7 @@
     "    y = model.predict(x)\n",
     "    acc = (y == gt_labels[:len(y)]).sum() / len(gt_labels)\n",
     "    gt_count = len(gt_reps) // 2\n",
-    "    pred_smoothed = smooth_pred(y-1, window=window) # minus 1 because no-class is 0\n",
+    "    pred_smoothed = major_vote(y-1, window=window) # minus 1 because no-class is 0\n",
     "    count, reps = pred_to_count(pred_smoothed, stride=1*1, step=1) \n",
     "    diff = abs(count - gt_count)\n",
     "    obo = 1 if (diff <= 1) else 0\n",
@@ -222,21 +218,7 @@
     "model.transmat_ = transmat\n",
     "model.means_ = means\n",
     "model.covars_ = cov\n",
-    "# model.fit(feat_ds.x.squeeze(1).numpy())\n",
-    "# models = [hmm.GMMHMM(n_components=n_states, n_iter=300, covariance_type='full', \n",
-    "    # random_state=random.randint(0, 100)) for _ in range(5)]\n",
-    "# models_score = []\n",
-    "# for m in models:\n",
-    "    # m.transmat_ = transmat\n",
-    "    # m.startprob_ = pi.T\n",
-    "    # m.means_ = means\n",
-    "    # m.covars_ = cov\n",
-    "    # softmax_x = F.softmax(torch.from_numpy(feat_ds.x.squeeze(1)), dim=1)\n",
-    "    # m.fit(feat_ds.x.squeeze(1).numpy())\n",
-    "    # models_score.append(m.score(feat_ds.x.squeeze(1).numpy()))\n",
-    "# print(models_score)\n",
-    "\n",
-    "# model = models[np.argmax(models_score)]    "
+    "  "
    ]
   },
   {
@@ -370,7 +352,7 @@
     }
    ],
    "source": [
-    "val_data = list(helper.get_rep_data(['val'], [action]).values())\n",
+    "val_data = list(get_rep_data(anno_path, data_root,['val'], [action]).values())\n",
     "item = random.choice(val_data)\n",
     "\n",
     "val_x = []\n",
@@ -386,7 +368,7 @@
     "print('count', len(js['ground_truth'])//2, 'name', item.video_name, item.class_)\n",
     "pred_mapped = pred.copy()\n",
     "# pred_mapped[pred == 0] = 1\n",
-    "pred_smoothed = smooth_pred(pred-1, window=1)\n",
+    "pred_smoothed = major_vote(pred-1, window=1)\n",
     "hmm_count, hmm_reps = pred_to_count(pred_smoothed, stride=1, step=1)\n",
     "# print('hmm pred', pred)\n",
     "# Baseline Argmax with threshold 0.6\n",
@@ -394,12 +376,12 @@
     "action_only_x = val_x[:, class_idx*2:class_idx*2+2]\n",
     "val_x_thre = [np.argmax(vx) if vx.max() >= threshold else -1 for vx in action_only_x]\n",
     "val_x_thre = np.array(val_x_thre) + 1\n",
-    "val_x_smoothed = smooth_pred(val_x_thre-1, window=10)\n",
+    "val_x_smoothed = major_vote(val_x_thre-1, window=10)\n",
     "argmax_count, argmax_reps = pred_to_count(val_x_smoothed, stride=1*10, step=1)\n",
     "print('argmax_smoothed', val_x_smoothed)\n",
     "\n",
-    "plot_raw_output(val_x, val_y, pred, val_x_thre, class_idx)\n",
     "title = f'{item.video_name} {item.class_}'\n",
+    "plot_raw_output(val_x, val_y, pred, val_x_thre, class_idx, title)\n",
     "plot_pred_reps(hmm_reps, js['ground_truth'], argmax_reps, item.total_frames, item.fps, title, step=1)"
    ]
   },
@@ -467,7 +449,7 @@
     "smooth_params = {'front_raise': 1, 'situp': 1, 'pull_up': 5, 'push_up': 5, 'squat': 5, 'jump_jack': 5}\n",
     "\n",
     "def eval_subset(model, split, action):\n",
-    "    test_data = list(helper.get_rep_data([split], [action]).values())\n",
+    "    test_data = list(get_rep_data(anno_path, data_root, [split], [action]).values())\n",
     "    total_obo, total_err, total_acc, gt_total_count = 0, 0, 0, 0\n",
     "    for item in test_data:\n",
     "        test_x = []\n",
