--- a/workoutdet/RepCount_data_process.ipynb
+++ b/workoutdet/RepCount_data_process.ipynb
@@ -636,12 +636,6 @@
     "val_df.drop(val_df.columns[3:-1], axis=1, inplace=True)\n",
     "test_df.drop(test_df.columns[3:-1], axis=1, inplace=True)\n",
     "\n",
-    "# train_df.apply(lambda x: print(int(x['count']), x['reps']), axis=1)\n",
-    "\n",
-    "# train_df['reps'] = train_df.apply(lambda x: ' '.join([str(int(y)) for y in x['reps'] if y>=0]), axis=1)\n",
-    "# val_df['reps'] = val_df.apply(lambda x: ' '.join([str(int(y)) for y in x['reps'] if y>=0]), axis=1)\n",
-    "# test_df['reps'] = test_df.apply(lambda x: ' '.join([str(int(y)) for y in x['reps'] if y>=0 ]), axis=1)\n",
-    "\n",
     "train_df.at[train_df.index[1], 'reps']"
    ]
   },
@@ -1235,11 +1229,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "9ac44e3a5a0596b514731e2f84c219b304de7b3485523626a2f8b154e2423b93"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('mmlab')",
+   "display_name": "Python 3.10.4 ('work')",
    "language": "python",
    "name": "python3"
   },
@@ -1253,9 +1244,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.4"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "1026ab37aa66ddc060b5648192bda26a8a0ee95f0aa0518405a69ba9839c9824"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
