--- a/workoutdet/RepCount_data_process.ipynb
+++ b/workoutdet/RepCount_data_process.ipynb
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1230,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('work')",
+   "display_name": "Python 3.8.13 ('mmlab')",
    "language": "python",
    "name": "python3"
   },
@@ -1244,12 +1244,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "1026ab37aa66ddc060b5648192bda26a8a0ee95f0aa0518405a69ba9839c9824"
+    "hash": "9ac44e3a5a0596b514731e2f84c219b304de7b3485523626a2f8b154e2423b93"
    }
   }
  },
